Updated README; Added maven settings.xml file.